--- a/Nela.html
+++ b/Nela.html
@@ -54,7 +54,11 @@
                 </div>    
         </div> 
    
+        <div class="container 2">
+            <div class="img portrait">
 
+            </div>
+        </div>
 
 
 
@@ -66,8 +70,8 @@
         <div class="container_portrait">
             <div class="image"> 
                 <description>PORTRAIT</description>
-                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
                 <desscription-wrap></desscription-wrap>
+                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
             </div>
         </div>
 
@@ -106,22 +110,76 @@
             
 <!-- PORTFILIO ландшафт и натюрморт-->
 
+<div class="container_L S">
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+    <div class="container_L S-img">
+        <img src="img/photo/L S/1.jpg"; width="500px">
+    </div>
+
+
+    <button class="btn to order">TO ORDER</button> 
 </div>
-<div class="container_L&S">
-    <div class="container_L&S-img">
-        <img src="img/photo/L&S/1.jpg"; width="500px">
-    </div>  
-<button>TO ORDER</button> 
-</div>
-
-
-
-
 <!-- PORTFILIO открытки-->
 
+<div class="postcards 1">
+    <div class="postcards 1 pich">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+    </div>
+        <div class="container_postcards 1-text">
+            Send Nela an e-mail about purchasing or commissions. 
+        </div>
+    <button class="btn to order">TO ORDER</button> 
+</div>
+
+<div class="postcards 2 carousel">
+        <div class="postcards 2">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+            <img src="img/photo/postcards/1.jpg"; width="500px">
+        </div>
+</div>
 
 
-
+<div class="postcards 3">
+    <div class="postcards 3 pich">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <img src="img/photo/postcards/1.jpg"; width="500px">
+        <button class="btn to order">TO ORDER</button> 
+    </div>
+</div>
 
     </body>
 </html>    
