--- a/Nela.html
+++ b/Nela.html
@@ -14,12 +14,12 @@
         <div class="container_maine"> 
             <div class="header">
                 <div class="logo"><a href="#">NELA</a></div>
-                <div clacc="menu">
+                <div class="menu">
                     <ul>
-                        <li><a href="#">PORTRAITS</a></li>
-                        <li><a href="#">TAPESTRRIES</a></li>
-                        <li><a href="#">LANDSCAPES & STILLMORTS</a></li>
-                        <li><a href="#">POSTCARDS</a></li>
+                        <li class="menu_item"><a href="#">PORTRAITS</a></li>
+                        <li class="menu_item"><a href="#">TAPESTRRIES</a></li>
+                        <li class="menu_item"><a href="#">LANDSCAPES & STILLMORTS</a></li>
+                        <li class="menu_item"><a href="#">POSTCARDS</a></li>
                     </ul>
                 </div>
             </div>
@@ -27,7 +27,7 @@
             <div class="content">
                 <div class="box-1">
                     <div class="text1">
-                        <h1><u>WORK to ORDER & READY-MAIDE WORK</u></h1>
+                        <h1>WORK to ORDER & READY-MAIDE WORK</h1>
                     </div>
                     <div class="text2">    
                         <h4>HI! My name is Nela.</h4> 
@@ -38,7 +38,7 @@
                 <div class="box-2">
                     <div class="img"> 
                         <div class="photo">
-                            <img src="img/photo/portraits/IMG_DSCN0801.jpg"; width="500px" height="600px">
+                            <img src="pic/NELA.jpg"; width="480px" height="600px">
                         </div>
                     </div>
                 </div>
@@ -55,31 +55,23 @@
     </div>
    <!-- Вторая стр выплывающие работы -->
         <div class="container-second">
-            <div class="1_img">
-                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
-                <div class="text">PORTRAITS</div>   
+            <div class="block_from_bottom first">
+               <div class="text">PORTRAITS
+                   </div>   
             </div>
-            <div class="2_img">
-                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
-                <div class="text">TAPESTRRIES</div>
+                <div class="block_from_bottom second">
+            <div class="text">TAPESTRRIES
+                   </div>
             </div>
-            <div class="3_img">
-                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
-                <div class="text">LANDSCAPES & STILLMORTS</div>
+                <div class="block_from_bottom ">
+            <div class="text">LANDSCAPES & STILLMORTS
+                </div>
             </div>
-            <div class="4_img">
-                    <img src="img/photo/portraits/IMG_0179.jpg"; width="500px">
-                <div class="text">POSTCARDS</div>
-            </div>
-        <div class="footer">
-            <div class="info">
-                <a href="#">Information For Customer</a>
-            </div>
-                <div class="mail">
-                    <a href="#">Nela@mail...</a>
-                </div>   
+                <div class="block_from_bottom">
+            <div class="text">POSTCARDS
             </div>
         </div>
+        </div>   
 
     <!-- NELA -->
     <div class="container_NELA">
