--- a/Nela.html
+++ b/Nela.html
@@ -54,7 +54,7 @@
         </div> 
     </div>
    <!-- Вторая стр выплывающие работы надо подумать..?-->
-        <div class="container-second">
+        <!-- <div class="container-second">
             <div class="block_from_bottom first">
                <div class="text">PORTRAITS
                    </div>   
@@ -71,7 +71,7 @@
             <div class="text">POSTCARDS
             </div>
         </div>
-        </div>   
+        </div>    -->
 
     <!-- NELA -->
     <div class="container_NELA">
@@ -250,24 +250,24 @@
             </ul>
         </div>
     </div>
-<div class="container_L/S">
-    <div class="container_L/S_img">
-        <img src="pic/1.jpg"; width="500px">
+<div class="container_L_S">
+    <div class="container_L_S_img">
+        <img src="pic/1.jpg"; width="300px">
     </div>
-    <div class="container_L/S_img">
-        <img src="pic/1.jpg"; width="500px">
+    <div class="container_L_S_img">
+        <img src="pic/1.jpg"; width="300px">
     </div>
-    <div class="container_L/S_img">
-        <img src="pic/1.jpg"; width="500px">
+    <div class="container_L_S_img">
+        <img src="pic/1.jpg"; width="300px">
     </div>
     <div class="container_LS_img">
-        <img src="pic/1.jpg"; width="500px">
+        <img src="pic/1.jpg"; width="300px">
     </div>
     <div class="container_L/S_img">
-        <img src="pic/1.jpg"; width="500px">
+        <img src="pic/1.jpg"; width="300px">
     </div>
     <div class="container_L/S_img">
-        <img src="pic/1.jpg"; width="500px">
+        <img src="pic/1.jpg"; width="300px">
     </div>
     <button class="btn to order">TO ORDER</button> 
 </div>
