--- a/Nela.html
+++ b/Nela.html
@@ -127,8 +127,8 @@
 <!-- ПОРТРЕТЫ -->
     <div class="container_portrait">
         <div class="container_portrait_all">
-         <div class="container_portrait_image">
-            <div class="image_item"> 
+            <div class="container_portrait_image">
+                <div class="image_item"> 
                 
                 <description>PORTRAIT</description>
                 <desscription-wrap></desscription-wrap>
@@ -239,7 +239,7 @@
         </div>
                
 <!-- PORTFILIO ландшафт и натюрморт-->
-<div class="Header_L/S">
+<div class="Header_L_S">
         <div class="logo"><a href="#">NELA</a></div>
             <div clacc="menu">
             <ul>
@@ -260,13 +260,13 @@
     <div class="container_L_S_img">
         <img src="pic/1.jpg"; width="300px">
     </div>
-    <div class="container_LS_img">
+    <div class="container_L+S_img">
         <img src="pic/1.jpg"; width="300px">
     </div>
-    <div class="container_L/S_img">
+    <div class="container_L_S_img">
         <img src="pic/1.jpg"; width="300px">
     </div>
-    <div class="container_L/S_img">
+    <div class="container_L_S_img">
         <img src="pic/1.jpg"; width="300px">
     </div>
     <button class="btn to order">TO ORDER</button> 
@@ -344,7 +344,7 @@
                     <img src="pic/IMG_3622 1.jpg"; width="200px" height="200px">
                 </div>
                 <div class="postcards_3_3_img">
-                    <img src="ipic/IMG_3622 1.jpg"; width="200px" height="200px">
+                    <img src="pic/IMG_3622 1.jpg"; width="200px" height="200px">
                 </div>    
                 <div class="postcards_3_4_img">
                     <img src="pic/IMG_3622 1.jpg";width="200px" height="200px">
