--- a/L_S.html
+++ b/L_S.html
@@ -28,15 +28,15 @@
             </div>
         <!-- галерея -->
 <div class="galleryL_S">
-    <div><img src="pic/L&S/1.jpg" alt=""></div>
-    <div><img src="pic/L&S/11.jpg" alt=""></div>
-    <div><img src="pic/L&S/11(2).jpg" alt=""></div>
-    <div><img src="pic/L&S/11 (3).jpg" alt=""></div>
-    <div><img src="pic/L&S/11 (4).jpg" alt=""></div>
-    <div><img src="pic/L&S/11 (5).jpg" alt=""></div>
-    <div><img src="pic/L&S/11 (6).jpg" alt=""></div>
-    <div><img src="pic/L&S/11 (7).jpg" alt=""></div>
-    
+    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <<div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
+    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
+    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
 </div>
 
 
