--- a/L_S.html
+++ b/L_S.html
@@ -11,7 +11,7 @@
     <body>
         <!-- шапка -->
         <div class="header">
-                <a href="#" class="logo">NELA</a>
+                <!-- <a href="#" class="logo">NELA</a> -->
                 <div class="nav">
                     <ul class="spesial">
                         <!-- <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> -->
@@ -29,14 +29,25 @@
         <!-- галерея -->
 <div class="galleryL_S">
     <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <<div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (7).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (2).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (3).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (4).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (5).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11 (6).jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/7D0C38.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/9DEB7.jpg')"> <img src="" alt=""></div> 
+    <div class="LS" style="background-image: url('pic/L&S/1 (2).jpg')"> <img src="" alt=""></div> 
+    <div class="LS" style="background-image: url('pic/L&S/5.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/6.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/2.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/9AE3.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/11111.jpg')"> <img src="" alt=""></div>
+    <div class="LS" style="background-image: url('pic/L&S/12345.jpg')"> <img src="" alt=""></div>
+    <!-- <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
     <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
-    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
-    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
+    <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div> -->
 </div>
 
 
