--- a/N start.html
+++ b/N start.html
@@ -12,10 +12,10 @@
 <div class="section_top">
     <div class="wr">
         <div class="header">
-            <a href="#" class="logo">NELA</a>
+            <!-- <a href="#" class="logo">NELA</a> -->
             <div class="nav">
                 <ul class="spesial">
-                    <!-- <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> -->
+                    <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li>
                     <li class="menu_item"> <a class="a" title="" href="#">TAPESTRRIES</a></li>
                     <li class="menu_item"> <a class="a" title="" href="#">PORTRAITS</a></li>
                     <li class="menu_item"> <a class="a" title="" href="#">LANSCAPES & STILLMORTS</a></li>
