--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -47,85 +47,85 @@
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3611.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3611.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3625.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3625.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3626.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3626.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3631.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3631.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3636.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3636.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3638.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3638.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3640 1.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3640 1.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3648.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3648.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3659.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3659.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3670.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3670.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3675.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_3675.jpg">
             </a>
             </div>
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big/IMG_3622 1.jpg">
-                <img class="front" alt="" src="pic/postc/litt/IMG_3622 1.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big/IMG_9524.jpg">
+                <img class="front" alt="" src="pic/postc/litt/IMG_9524.jpg">
             </a>
             </div>
         </div>
