--- a/Gobilen.html
+++ b/Gobilen.html
@@ -12,13 +12,33 @@
 
     </head> 
     <body>
+        <!-- шапка -->
+        <div class="header">
+                <!-- <a href="#" class="logo">NELA</a> -->
+                <div class="nav">
+                    <ul class="spesial">
+                        <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> 
+                        <li class="menu_item"> <a class="a" title="" href="#">PORTRAITS</a></li>
+                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
+                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
+                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
+                        <li class="social">
+                                <a class="tw"></a> 
+                                <a class="fb"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
 <section class="dws-wrapper">
     <div class="flex-container">
     <div class="imageBox"><img src="pic/1010.jpg" alt="">
-        <h3>Ручное ткачество</h3>
-        <p>Шерсть, гладкое ткачество</p>
-        <ul>
+        <div class="overlay"></div>
+        <div class="textCont">
+            <h3>Ручное ткачество</h3>
+            <p>Шерсть, гладкое ткачество</p>
+        </div>
+        <ul class="socialCont">
             <li><a class="social" href="#"></a></li>
             <li><a class="social" href="#"></a></li>
             <li><a href="#">Q</a></li>
@@ -51,7 +71,6 @@
 <div class="dwsF-wrapper">
     <input class="checkbox" name="toggle" id="dws-form" class="toggleForm">
     <div class="dwsF-container">
-        
         <label for="dws-form" class="toggleForm" class="toggleForm"><img src="../icons/shopping-bag.PNG"> Делаю заказ</label>
         <form class="formBox">
             <div class="inputBox">
