--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
         <link rel="stylesheet" href="styles/lightbox.css"/>
+        <script src =" js/scrollreveal.min.js "></script>
 
     </head> 
     <body>
@@ -16,10 +17,10 @@
         <div class="nav">
             <ul class="spesial">
                 <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li>
-                <li class="menu_item"> <a class="a" title="" href="#">PORTRAITS</a></li>
-                <li class="menu_item"> <a class="a" title="" href="#">TAPESTRRIES</a></li>
-                <li class="menu_item"> <a class="a" title="" href="#">LANSCAPES & STILLMORTS</a></li>
-                <li class="menu_item"> <a class="a" title="" href="#">POSTCARDS</a></li>
+                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
+                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
+                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
+                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
                 <li class="social">
                         <a class="tw"></a> 
                         <a class="fb"></a>
