--- a/Gobilen.html
+++ b/Gobilen.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
         <link rel="stylesheet" href="styles/G_Style.css"/>
         <link rel="stylesheet" href="styles/media.css" media="all and (max-width: 890px)" type="text/css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"> -->
         <script
         src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
@@ -14,15 +15,13 @@
     <body>
         <!-- шапка -->
         <div class="header">
-                <!-- <a href="#" class="logo">NELA</a> -->
-                <div class="nav">
-                    <ul class="spesial">
-                        <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> 
-                        <li class="menu_item"> <a class="a" title="" href="#">PORTRAITS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
-                        <li class="social">
+            <div class="logo"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Nela.html">NELA</a></div>
+            <div class="menu">
+                <ul>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
                                 <a class="tw"></a> 
                                 <a class="fb"></a>
                         </li>
@@ -98,7 +97,9 @@
         </form>
     </div>
 </div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 <script>
+ 
     $(".userInput").focus(function(){
         $(this).parent().addClass("focus");
         
@@ -108,6 +109,7 @@
         }
     })
 </script>
+
 
 
 
