--- a/L_S.html
+++ b/L_S.html
@@ -6,20 +6,21 @@
         <link rel="stylesheet" href="styles/L_SStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <link rel="stylesheet" href="styles/animate.min.css"/>
+
 
     </head> 
     <body>
         <!-- шапка -->
         <div class="header">
-                <!-- <a href="#" class="logo">NELA</a> -->
-                <div class="nav">
-                    <ul class="spesial">
-                        <!-- <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> -->
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
-                        <li class="social">
+            <div class="logo"><a href="#">NELA</a></div>
+            <div class="menu">
+                <ul>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
                                 <a class="tw"></a> 
                                 <a class="fb"></a>
                         </li>
@@ -28,23 +29,23 @@
             </div>
         <!-- галерея -->
 <div class="galleryL_S">
-    <div class="LS" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (7).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (2).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (3).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (4).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (5).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11 (6).jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/7D0C38.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/9DEB7.jpg')"> <img src="" alt=""></div> 
-    <div class="LS" style="background-image: url('pic/L&S/1 (2).jpg')"> <img src="" alt=""></div> 
-    <div class="LS" style="background-image: url('pic/L&S/5.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/6.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/2.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/9AE3.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/11111.jpg')"> <img src="" alt=""></div>
-    <div class="LS" style="background-image: url('pic/L&S/12345.jpg')"> <img src="" alt=""></div>
+    <div class="LS fds" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
+    <div class="LS fds" style="background-image: url('pic/L&S/11 (7).jpg')"> <img src="" alt=""></div>
+    <div class="LS fds" style="background-image: url('pic/L&S/11 (2).jpg')"> <img src="" alt=""></div>
+    <div class="LS fdg" style="background-image: url('pic/L&S/11 (3).jpg')"> <img src="" alt=""></div>
+    <div class="LS fdg" style="background-image: url('pic/L&S/11 (4).jpg')"> <img src="" alt=""></div>
+    <div class="LS fdg" style="background-image: url('pic/L&S/11 (5).jpg')"> <img src="" alt=""></div>
+    <div class="LS ghj" style="background-image: url('pic/L&S/11.jpg')"> <img src="" alt=""></div>
+    <div class="LS ghj" style="background-image: url('pic/L&S/11 (6).jpg')"> <img src="" alt=""></div>
+    <div class="LS ghj" style="background-image: url('pic/L&S/7D0C38.jpg')"> <img src="" alt=""></div>
+    <div class="LS hjk" style="background-image: url('pic/L&S/9DEB7.jpg')"> <img src="" alt=""></div> 
+    <div class="LS hjk" style="background-image: url('pic/L&S/1 (2).jpg')"> <img src="" alt=""></div> 
+    <div class="LS hjk" style="background-image: url('pic/L&S/5.jpg')"> <img src="" alt=""></div>
+    <div class="LS jkl" style="background-image: url('pic/L&S/6.jpg')"> <img src="" alt=""></div>
+    <div class="LS jkl" style="background-image: url('pic/L&S/2.jpg')"> <img src="" alt=""></div>
+    <div class="LS jkl" style="background-image: url('pic/L&S/9AE3.jpg')"> <img src="" alt=""></div>
+    <div class="LS kl" style="background-image: url('pic/L&S/11111.jpg')"> <img src="" alt=""></div>
+    <div class="LS kl" style="background-image: url('pic/L&S/12345.jpg')"> <img src="" alt=""></div>
     <!-- <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
     <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
     <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div> -->
@@ -52,4 +53,7 @@
 
 
     </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="scripts/scripts.js"></script>
+
 </html>    
