--- a/Portraits Gallery.html
+++ b/Portraits Gallery.html
@@ -11,15 +11,13 @@
     <body>
         <!-- шапка -->
         <div class="header">
-                <a href="#" class="logo">NELA</a>
-                <div class="nav">
-                    <ul class="spesial">
-                        <!-- <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li> -->
-                        <li class="menu_item"> <a class="a" title="" href="#">PORTRAITS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
-                        <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
-                        <li class="social">
+            <div class="logo"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Nela.html">NELA</a></div>
+            <div class="menu">
+                <ul>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
                                 <a class="tw"></a> 
                                 <a class="fb"></a>
                         </li>
@@ -28,16 +26,16 @@
             </div>
         <!-- галерея -->
 <div class="gallery">
-    <div><img src="pic/IMG_0179.jpg" alt=""></div>
-    <div><img src="pic/po/CAM00006.jpg" alt=""></div>
-    <div><img src="pic/po/CAM05230.jpg" alt=""></div>
-    <div><img src="pic/po/DSC00295-1.jpg" alt=""></div>
-    <div><img src="pic/po/DSC00299-1 1.jpg" alt=""></div>
-    <div><img src="pic/po/DSCN0839-2.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_3311 1.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_3982.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_4264.jpg" alt=""></div>
-    <div><img src="pic/po/mom(1).jpg" alt=""></div>
+    <div><img src="pic/po/IMG_0179-min.jpg" alt=""></div>
+    <div><img src="pic/po/CAM00006-min.jpg" alt=""></div>
+    <div><img src="pic/po/CAM05230-min.jpg" alt=""></div>
+    <div><img src="pic/po/DSC00295-1-min.jpg" alt=""></div>
+    <div><img src="pic/po/DSC00299-1 1-min.jpg" alt=""></div>
+    <div><img src="pic/po/DSCN0839-2-min.jpg" alt=""></div>
+    <div><img src="pic/po/IMG_3311 1-min.jpg" alt=""></div>
+    <div><img src="pic/po/IMG_3982-min.jpg" alt=""></div>
+    <div><img src="pic/po/IMG_4264-min.jpg" alt=""></div>
+    <div><img src="pic/po/mom(1)-min.jpg" alt=""></div>
 </div>
 
 
