--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -16,7 +16,7 @@
         <!-- <a href="#" class="logo">NELA</a> -->
         <div class="nav">
             <ul class="spesial">
-                <li class="menu_item"> <a class="a" title="" href="#">NELA</a></li>
+                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Nela.html">NELA</a></li>
                 <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
                 <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
                 <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
