--- a/Nela.html
+++ b/Nela.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
          
-            <div class="content">
+            <diыv class="content">
                 <div class="box-1">
                     <div class="text1">
                         <h1 class="animated fadeIn">WORK to ORDER & READY-MAIDE WORK</h1>
